# RAM

./: .gitignore  CFG  CMakeLists.txt  Doxyfile  RAM.kdev4  main.cpp  test.sh
.kdev4/: RAM.kdev4
src/: .Program.cpp.kate-swp  CMakeLists.txt  Parser.cpp  Parser.h  ParserException.cpp  ParserException.h  Program.cpp  Program.h  UI.cpp  UI.h  includes.cpp  includes.h
src/RAM/: ITape.cpp  ITape.h  Machine.cpp  Machine.h  OTape.cpp  OTape.h  Parser.cpp  Parser.h  Program.cpp  Program.h  Registers.cpp  Registers.h  StringSymbol.cpp  StringSymbol.h  Tape.cpp  Tape.h
test/: fact  fact.ram  input  test1.ram  test2.ram  test3.ram
